Edit content html

--- a/responsive-css.html
+++ b/responsive-css.html
@@ -31,10 +31,24 @@
 
 			<div class="container">
 
-				<h1 name="top">Responsive CSS</h1>
+				<h1 name="top">CSS2</h1>
 
 					<section>
-						<h2></h2>
+						<h2>Start</h2>
+
+						<ul>
+							<li>Color types</li>
+							<li>Background colors</li>
+							<li>Background images</li>
+							<li>Repeating background images</li>
+							<li>Borders</li>
+							<li>The Box Model</li>
+							<li>Padding</li>
+							<li>Margin</li>
+							<li>Centering an element</li>
+							<li>Outline</li>
+							<li>Cursor</li>
+						</ul>
 
 
 					</section>
