--- a/responsive-css.html
+++ b/responsive-css.html
@@ -21,9 +21,9 @@
 			<div class="left-nav">
 
 				<ul>
-					<li><a href="#top">Responsive CSS</a></li>
-					<li><a href="#mid">CSS2</a></li>		
-					<li><a href="#test">CSS3</a></li>			
+					<li><a href="#start">Start</a></li>
+					<li><a href="#txt-formatting">Text formatting</a></li>		
+					<li><a href="#fonts-styling">Fonts and Font Styling</a></li>			
 				</ul>
 				
 
@@ -33,8 +33,10 @@
 
 				<h1 name="top">CSS2</h1>
 
+					<p>CSS stands for Cascading Style Sheets it is a language that is used to describe the presentation of a HTML docuement.</p>
+
 					<section>
-						<h2>Start</h2>
+						<h2 id="start">Start</h2>
 
 						<ul>
 							<li>Color types</li>
@@ -55,7 +57,53 @@
 					<!------------->
 				
 					<section>
-						<h2></h2>
+						<h2 id="txt-formatting">Text Formatting</h2>
+
+						<ul>
+							<li>Text color</li>
+							<li>Text aligment</li>
+							<li>Text decoration</li>
+							<li>Text transform</li>
+							<li>Text indent</li>
+							<li>Letter spacing</li>
+							<li>Line height</li>
+							<li>Direction</li>
+							<li>Word spacing</li>
+						</ul>
+
+					</section>
+				<!------------->
+					<section>
+						<h2 id="fonts-styling">Fonts and Font Styling</h2>
+
+						<ul>
+							<li>Serif vs. Sans Serif</li>
+							<li>Font Family</li>
+							<li>Free Fonts</li>
+							<li>Font Style</li>
+							<li>Font Size</li>
+							<li>Font Weight</li>
+							<li>Forn Variant</li>
+							<li>Font Awesome</li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
 
 
 					</section>
@@ -63,13 +111,120 @@
 					<section>
 						<h2></h2>
 
-
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
 					</section>
-				<!------------->
+					<!------------->
 					<section>
 						<h2></h2>
 
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</section>
+					<!------------->
+					<section>
+						<h2></h2>
 
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</section>
+					<!------------->
+					<section>
+						<h2></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</section>
+					<!------------->
+					<section>
+						<h2></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</section>
+					<!------------->
+					<section>
+						<h2></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</section>
+					<!------------->
+					<section>
+						<h2></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
 					</section>
 
 			
