--- a/responsive-css.html
+++ b/responsive-css.html
@@ -85,60 +85,29 @@
 							<li>Font Weight</li>
 							<li>Forn Variant</li>
 							<li>Font Awesome</li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
 						</ul>
 
 
 					</section>
 				<!------------->
 					<section>
-						<h2></h2>
+						<h2>Links and States</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Hover over links</li>
+							<li>Visited links</li>
+							<li>Active links</li>
 						</ul>
-					</section>
+					</section>S
 					<!------------->
 					<section>
-						<h2></h2>
+						<h2>Selectors</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Grouping selectors</li>
+							<li>Descendant selectors and specificity</li>
+							<li>Child selectors</li>
+							<li>Adjacent selectors</li>
 						</ul>
 					</section>
 					<!------------->
