--- a/responsive-css.html
+++ b/responsive-css.html
@@ -39,15 +39,15 @@
 						<h2 id="start">Start</h2>
 
 						<ul>
-							<li>Color types</li>
-							<li>Background colors</li>
-							<li>Background images</li>
-							<li>Repeating background images</li>
+							<li>Color Types</li>
+							<li>Background Colors</li>
+							<li>Background Images</li>
+							<li>Repeating Background Images</li>
 							<li>Borders</li>
 							<li>The Box Model</li>
 							<li>Padding</li>
 							<li>Margin</li>
-							<li>Centering an element</li>
+							<li>Centering an Element</li>
 							<li>Outline</li>
 							<li>Cursor</li>
 						</ul>
@@ -60,15 +60,15 @@
 						<h2 id="txt-formatting">Text Formatting</h2>
 
 						<ul>
-							<li>Text color</li>
-							<li>Text aligment</li>
-							<li>Text decoration</li>
-							<li>Text transform</li>
-							<li>Text indent</li>
-							<li>Letter spacing</li>
-							<li>Line height</li>
+							<li>Text Color</li>
+							<li>Text Aligment</li>
+							<li>Text Decoration</li>
+							<li>Text Transform</li>
+							<li>Text Indent</li>
+							<li>Letter Spacing</li>
+							<li>Line Height</li>
 							<li>Direction</li>
-							<li>Word spacing</li>
+							<li>Word Spacing</li>
 						</ul>
 
 					</section>
@@ -94,9 +94,9 @@
 						<h2>Links and States</h2>
 
 						<ul>
-							<li>Hover over links</li>
-							<li>Visited links</li>
-							<li>Active links</li>
+							<li>Hover Over Links</li>
+							<li>Visited Links</li>
+							<li>Active Links</li>
 						</ul>
 					</section>S
 					<!------------->
@@ -104,61 +104,41 @@
 						<h2>Selectors</h2>
 
 						<ul>
-							<li>Grouping selectors</li>
-							<li>Descendant selectors and specificity</li>
-							<li>Child selectors</li>
-							<li>Adjacent selectors</li>
+							<li>Grouping Selectors</li>
+							<li>Descendant Selectors and Specificity</li>
+							<li>Child Selectors</li>
+							<li>Adjacent Selectors</li>
 						</ul>
 					</section>
 					<!------------->
 					<section>
-						<h2></h2>
+						<h2>Lists</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>List Style Type</li>
+							<li>List Style Position</li>
+							<li>List Style Image</li>
 						</ul>
 					</section>
 					<!------------->
 					<section>
-						<h2></h2>
+						<h2>Tables</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Table Borders</li>
+							<li>Table Cell Vertical Align</li>
+							<li>Table Row Hover Effect</li>
 						</ul>
 					</section>
 					<!------------->
 					<section>
-						<h2></h2>
+						<h2>Display</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Display Block</li>
+							<li>Display Inline</li>
+							<li>Display Inline-Block</li>
+							<li>Display None</li>
 						</ul>
 					</section>
 					<!------------->
