Edited html and css

--- a/responsive-css.html
+++ b/responsive-css.html
@@ -23,7 +23,10 @@
 				<ul>
 					<li><a href="#start">Start</a></li>
 					<li><a href="#txt-formatting">Text formatting</a></li>		
-					<li><a href="#fonts-styling">Fonts and Font Styling</a></li>			
+					<li><a href="#fonts-styling">Fonts and Font Styling</a></li>
+					<li><a href="#links-states">Links and States</a></li>
+					<li><a href="#selectors">Selectors</a></li>
+					<li><a href="#lists">Lists</a></li>			
 				</ul>
 				
 
@@ -91,7 +94,7 @@
 					</section>
 				<!------------->
 					<section>
-						<h2>Links and States</h2>
+						<h2 id="links-states">Links and States</h2>
 
 						<ul>
 							<li>Hover Over Links</li>
@@ -101,7 +104,7 @@
 					</section>S
 					<!------------->
 					<section>
-						<h2>Selectors</h2>
+						<h2 id="selectors">Selectors</h2>
 
 						<ul>
 							<li>Grouping Selectors</li>
@@ -112,7 +115,7 @@
 					</section>
 					<!------------->
 					<section>
-						<h2>Lists</h2>
+						<h2 id="lists">Lists</h2>
 
 						<ul>
 							<li>List Style Type</li>
