Adding topics, updating html

--- a/responsive-css.html
+++ b/responsive-css.html
@@ -206,8 +206,29 @@
 			</section>
 		<!-------Section------>
 			<section>
-				
+				<h2 id="pseudo-selectors">Pseudo Selectors</h2>
+
+						<ul>
+							<li>Hover Selector</li>
+							<li>First Child Selector</li>
+							<li>Focus Selector</li>
+							<li>Checked Selector</li>
+							<li>Disabled Selector</li>
+							<li>Enabled Selector</li>
+							<li>Not Selector</li>
+						</ul>
 			</section>
+		<!-------Section------>
+			<section>
+				<h2 id="pseudo-elements">Pseudo Elements</h2>
+
+						<ul>
+							<li>Before Selector</li>
+							<li>After Selector</li>
+						</ul>
+			</section>
+		<!-------Section------>
+
 		<!-------Section------>
 		<!----RIGHT-BOX-END--->
 		</div>
