--- a/responsive-css.html
+++ b/responsive-css.html
@@ -227,8 +227,82 @@
 							<li>After Selector</li>
 						</ul>
 			</section>
-		<!-------Section------>
+	<!------------------------>
+	<!---------CSS3----------->
+			<section>
+				<h1 id="">CSS3</h1>
 
+				<p>CSS3 Intro</p>
+			</section>
+		<!-------Section------>
+			<section>
+				<h2 id="">Rounding Corners</h2>
+
+						<ul>
+							<li>Border Radius</li>
+							<li>Round Images</li>
+							<li>Individually Rounded Corners</li>
+						</ul>
+			</section>
+		<!-------Section------>
+			<section>
+				<h2 id=""></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>							
+						</ul>
+			</section>
+		<!-------Section------>
+			<section>
+				<h2 id=""></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>							
+						</ul>
+			</section>
+		<!-------Section------>
+			<section>
+				<h2 id=""></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>							
+						</ul>
+			</section>
+		<!-------Section------>
+			<section>
+				<h2 id=""></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>							
+						</ul>
+			</section>
+		<!-------Section------>
+		<!-------Section------>
+		<!-------Section------>
+		<!-------Section------>
+		<!-------Section------>
+		<!-------Section------>
+		<!-------Section------>
 		<!-------Section------>
 		<!----RIGHT-BOX-END--->
 		</div>
