--- a/responsive-css.html
+++ b/responsive-css.html
@@ -246,41 +246,33 @@
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id=""></h2>
+				<h2 id="">Background Images</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>							
+							<li>Background Sizes</li>
+							<li>Multiple Background Images</li>
 						</ul>
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id=""></h2>
+				<h2 id="">New Color properties</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>							
+							<li>RGBA</li>
+							<li>HSL and HSLA</li>
+							<li>Opacity vs. Alpha</li>
 						</ul>
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id=""></h2>
+				<h2 id="">Gradients</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>							
+							<li>Linear Gradient</li>
+							<li>Linear Gradient Colors and Transparency</li>
+							<li>Repeating Linear Gradient</li>
+							<li>Radial Gradient</li>
+							<li>Repeating Radial Gradient</li>
 						</ul>
 			</section>
 		<!-------Section------>
