--- a/responsive-css.html
+++ b/responsive-css.html
@@ -277,6 +277,65 @@
 			</section>
 		<!-------Section------>
 			<section>
+				<h2 id="">Shadows</h2>
+
+						<ul>
+							<li>Text Shadows</li>
+							<li>Box Shadows</li>				
+						</ul>
+			</section>
+		<!-------Section------>
+			<section>
+				<h2 id="">Text Formatting</h2>
+
+						<ul>
+							<li>Text Overflow</li>
+							<li>Word Wrap</li>
+							<li>Word Break</li>
+							<li>Text Align Last</li>
+							<li>Self-Hosted Custom Fonts</li>
+						</ul>
+			</section>
+		<!-------Section------>
+		<section>
+				<h2 id="">Transitions</h2>
+
+						<ul>
+							<li>Transition Sizes</li>
+							<li>Transition Colors</li>
+							<li>Transition Timing Functions</li>
+							<li>Transition Delay</li>
+						</ul>
+			</section>
+		<!-------Section------>
+		<section>
+				<h2 id="">Transformations</h2>
+
+						<ul>
+							<li>Translate</li>
+							<li>Rotate</li>
+							<li>Scale</li>
+							<li>Skew</li>
+							<li>Multiple Transformations</li>
+							<li>3D Transformations</li>				
+						</ul>
+			</section>
+		<!-------Section------>
+		<section>
+				<h2 id="">Animations</h2>
+
+						<ul>
+							<li>Animations Keyframes</li>
+							<li>Animation Fill Mode</li>
+							<li>Blinking Animation</li>
+							<li>Animation Iteration Count</li>
+							<li>Animation Delay</li>
+							<li>Animation Direction</li>	
+							<li>Animation Timing Function</li>			
+						</ul>
+			</section>
+		<!-------Section------>
+		<section>
 				<h2 id=""></h2>
 
 						<ul>
@@ -285,16 +344,35 @@
 							<li></li>
 							<li></li>
 							<li></li>
-							<li></li>							
+							<li></li>				
 						</ul>
 			</section>
 		<!-------Section------>
+		<section>
+				<h2 id=""></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>				
+						</ul>
+			</section>
 		<!-------Section------>
-		<!-------Section------>
-		<!-------Section------>
-		<!-------Section------>
-		<!-------Section------>
-		<!-------Section------>
+		<section>
+				<h2 id=""></h2>
+
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>				
+						</ul>
+			</section>
 		<!-------Section------>
 		<!----RIGHT-BOX-END--->
 		</div>
