--- a/responsive-css.html
+++ b/responsive-css.html
@@ -45,9 +45,9 @@
 		<!-------RIGHT-BOX---->
 		<!-------Section------>
 			<section>
-				<h1>Introduction</h1>
+				<h1>Introduction to CSS</h1>
 
-				<p>Say something about the topic.</p>
+				<p>Say something about the topic. Read more <a href="https://www.w3.org/Style/CSS20/history.html" target="_blank">here</a>.</p>
 				
 			</section>
 		<!-------Section------>
