Update html content an rename to index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>REsponsive CSS Notes</title>
+	<title>Responsive CSS Notes</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 
@@ -36,6 +36,30 @@
 					<li><a href="#overflow">Overflow</a></li>
 					<li><a href="#float-and-clear">Float and Clear</a></li>
 					<li><a href="#advanced-selectors">Advanced Selectors</a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
 				</ul>	
 			</aside>
 		</div>
@@ -70,7 +94,7 @@
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id="txt-formatting">Text Formatting</h2>
+				<h2 id="text-formatting">Text Formatting</h2>
 
 						<ul>
 							<li>Text Color</li>
@@ -286,7 +310,7 @@
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id="">Text Formatting</h2>
+				<h2 id="text-formatting-css3">Text Formatting CSS3</h2>
 
 						<ul>
 							<li>Text Overflow</li>
@@ -298,7 +322,7 @@
 			</section>
 		<!-------Section------>
 		<section>
-				<h2 id="">Transitions</h2>
+				<h2 id="transitions">Transitions</h2>
 
 						<ul>
 							<li>Transition Sizes</li>
@@ -309,7 +333,7 @@
 			</section>
 		<!-------Section------>
 		<section>
-				<h2 id="">Transformations</h2>
+				<h2 id="transformations">Transformations</h2>
 
 						<ul>
 							<li>Translate</li>
@@ -322,7 +346,7 @@
 			</section>
 		<!-------Section------>
 		<section>
-				<h2 id="">Animations</h2>
+				<h2 id="animations">Animations</h2>
 
 						<ul>
 							<li>Animations Keyframes</li>
@@ -336,41 +360,44 @@
 			</section>
 		<!-------Section------>
 		<section>
-				<h2 id=""></h2>
+				<h2 id="misc">Miscellaneous</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>				
+							<li>Columns</li>
+							<li>Resize</li>
+							<li>Box Sizing</li>
 						</ul>
 			</section>
 		<!-------Section------>
 		<section>
-				<h2 id=""></h2>
+				<h2 id="Flexbox">Flexbox</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>				
+							<li>Equal Sized Columns</li>
+							<li>Flexbox Order</li>
+							<li>Flexbox Rows and Columns</li>
+							<li>Flexbox Reversed Rows and Columns</li>
+							<li>Flexbox Basis</li>
+							<li>Flexbox Wrap</li>
+							<li>Flexbox Vertical Aligment</li>
+							<li>Flexbox Align Items</li>
+							<li>Flexbox Justify Content</li>
+							<li>Flexbox Align Self</li>
+							<li>Flexbox Align Content</li>
 						</ul>
 			</section>
 		<!-------Section------>
 		<section>
-				<h2 id=""></h2>
+				<h2 id="responsive-web-design">Responsive Web Design</h2>
 
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>				
+							<li>RWD Meta Tag</li>
+							<li>Responsive Layout with Flexbox</li>
+							<li>RWD Print Mode</li>
+							<li>Multiple Media Queries</li>
+							<li>Responsive Images</li>
+							<li>Responsive Images</li>
+							<li>Responsive iFrames</li>
 						</ul>
 			</section>
 		<!-------Section------>
