--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
 					<li><a href="#overflow">Overflow</a></li>
 					<li><a href="#float-and-clear">Float and Clear</a></li>
 					<li><a href="#advanced-selectors">Advanced Selectors</a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
+					<li><a href="#pseudo-selectors">Pseudo Selectors</a></li>
+					<li><a href="#css3">CSS#</a></li>
+					<li><a href="#rounding-corners">Rounding Corners</a></li>
+					<li><a href="#background-images">Background Images</a></li>
+					<li><a href="#new-color-properties">New Color Properties</a></li>
+					<li><a href="#gradients">Gradients</a></li>
+					<li><a href="#shadows">Shadows</a></li>
+					<li><a href="#text-formatting-css3">Text Formatting CSS3</a></li>
+					<li><a href="#transitions">Transitions</a></li>
+					<li><a href="#transformations">Transformations</a></li>
+					<li><a href="#animations">Animations</a></li>
+					<li><a href="#misc">Miscellaneous</a></li>
+					<li><a href="#flexbox">Flexbox</a></li>
+					<li><a href="#responsive-web-design">Responsive Web Design</a></li>
 					<li><a href="#"></a></li>
 					<li><a href="#"></a></li>
 					<li><a href="#"></a></li>
@@ -91,6 +91,17 @@
 							<li>Outline</li>
 							<li>Cursor</li>
 						</ul>
+
+						<article>
+							<h3>Color Types</h3>
+
+							<ol>
+								<li>Named Colors</li>
+								<li>Hex Colors</li>
+								<li>RGB Colors</li>
+							</ol>
+						</article>
+
 			</section>
 		<!-------Section------>
 			<section>
@@ -254,13 +265,13 @@
 	<!------------------------>
 	<!---------CSS3----------->
 			<section>
-				<h1 id="">CSS3</h1>
+				<h1 class="H1" id="css3">CSS3</h1>
 
 				<p>CSS3 Intro</p>
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id="">Rounding Corners</h2>
+				<h2 id="rounding-corners">Rounding Corners</h2>
 
 						<ul>
 							<li>Border Radius</li>
@@ -270,7 +281,7 @@
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id="">Background Images</h2>
+				<h2 id="background-images">Background Images</h2>
 
 						<ul>
 							<li>Background Sizes</li>
@@ -279,7 +290,7 @@
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id="">New Color properties</h2>
+				<h2 id="new-color-properties">New Color Properties</h2>
 
 						<ul>
 							<li>RGBA</li>
@@ -289,7 +300,7 @@
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id="">Gradients</h2>
+				<h2 id="gradients">Gradients</h2>
 
 						<ul>
 							<li>Linear Gradient</li>
@@ -301,7 +312,7 @@
 			</section>
 		<!-------Section------>
 			<section>
-				<h2 id="">Shadows</h2>
+				<h2 id="shadows">Shadows</h2>
 
 						<ul>
 							<li>Text Shadows</li>
@@ -370,7 +381,7 @@
 			</section>
 		<!-------Section------>
 		<section>
-				<h2 id="Flexbox">Flexbox</h2>
+				<h2 id="flexbox">Flexbox</h2>
 
 						<ul>
 							<li>Equal Sized Columns</li>
