--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
 							</ol>
 						</article>
 
+						<article>
+							<h3>Background Image</h3>
+
+							<code>background-image: url('foto.jpg');</code>
+						</article>
+
 			</section>
 		<!-------Section------>
 			<section>
