--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Responsive CSS Notes</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles/style.css">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
@@ -107,6 +107,25 @@
 
 							<code>background-image: url('foto.jpg');</code>
 						</article>
+
+						<article>
+							<h3>Repeating Background Image</h3>
+
+							<code>background-image: url('foto.jpg');<br>
+								  background-repeat: no-repeat;<br>
+								  background-repeat: repeat-x;<br>
+								  background-repeat: repeat-y;
+							</code>
+
+						</article>
+
+						<article>
+							<h3>The Box Model</h3>
+
+							<div id="the-box-model"></div>
+						</article>
+
+
 
 			</section>
 		<!-------Section------>
