--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<ul>
 					<li><a href="#home">Home</a></li>
 					<li><a href="#start">Start</a></li>
-					<li><a href="#txt-formatting">Text formatting</a></li>		
+					<li><a href="#text-formatting">Text formatting</a></li>		
 					<li><a href="#fonts-styling">Fonts and Font Styling</a></li>
 					<li><a href="#links-states">Links and States</a></li>
 					<li><a href="#selectors">Selectors</a></li>
@@ -125,7 +125,18 @@
 							<div id="the-box-model"></div>
 						</article>
 
+						<article>
+							<h3>Centering an Element</h3>
 
+							<code>
+								margin: 0 auto;
+							</code>
+						</article>
+
+						<article>
+							<h3>Cursor</h3>
+							<code>cursor: cell;</code>
+						</article>
 
 			</section>
 		<!-------Section------>
@@ -142,7 +153,63 @@
 							<li>Line Height</li>
 							<li>Direction</li>
 							<li>Word Spacing</li>
-						</ul>				
+						</ul>	
+
+						<article>
+							<h3>Text Align</h3>
+
+							<code>
+								text-align: center;<br>
+								text-align: justify;
+							</code>
+						</article>	
+
+						<article>
+							<h3>Text Decoration</h3>
+
+							<code>
+								text-decoration: underline;<br>
+								text-decoration: overline;<br>
+								text-decoration: line-through;<br>
+								text-decoration: initial;<br>
+								text-decoration-style: dotted;
+							</code>
+
+						</article>	
+
+						<article>
+							<h3>Text Transform</h3>
+
+							<code>
+								text-transform: uppercase;<br>
+								text-transform: lowercase;<br>
+								text-transform: capitalize;
+							</code>
+						</article>
+
+						<article>
+							<h3>Text Indent</h3>
+
+							<code>
+								text-indent: 25px;
+							</code>
+						</article>
+
+						<article>
+							<h3>Letter Spacing</h3>
+
+							<code>
+								letter-spacing: 5px;
+							</code>
+						</article>
+
+						<article>
+							<h3>Line Height</h3>
+
+							<code>
+								line-height: 2; /*px work as well*/
+							</code>
+						</article>
 			</section>			
 		<!-------Section------>
 			<section>
