--- a/index.html
+++ b/index.html
@@ -210,6 +210,22 @@
 								line-height: 2; /*px work as well*/
 							</code>
 						</article>
+
+						<article>
+							<h3>Direction</h3>
+
+							<code>
+								direction: ltr; /*left to right and right to left - rtl*/
+							</code>
+						</article>
+
+						<article>
+							<h3>Word Spacing</h3>
+
+							<code>
+								word-spacing: 2px;
+							</code>
+						</article>
 			</section>			
 		<!-------Section------>
 			<section>
@@ -225,6 +241,15 @@
 							<li>Forn Variant</li>
 							<li>Font Awesome</li>
 						</ul>
+
+						<article>
+							<h3>Serif vs. Sans-Serif</h3>
+
+							<code>font-family: Times; /*Serif*/<br>
+							font-family: Arial; /*Sans-Serif*/
+							</code>
+
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
