--- a/index.html
+++ b/index.html
@@ -250,6 +250,30 @@
 							</code>
 
 						</article>
+
+						<article>
+							<h3>Font Family</h3>
+
+							<code>
+								font-family: cursive; /* serif and sans-serif */
+							</code>
+						</article>
+
+						<article>
+							<h3>Font Style</h3>
+
+							<code>
+								font-style: italic;
+							</code>
+						</article>
+
+						<article>
+							<h3>Font Variant</h3>
+
+							<code>
+								font-variant: small-caps;
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
