--- a/index.html
+++ b/index.html
@@ -284,6 +284,20 @@
 							<li>Visited Links</li>
 							<li>Active Links</li>
 						</ul>
+
+						<article>
+							<h3>Hover over Link</h3>
+							<p>Pseudo selector <code>a:hover {}</code>.</p>
+						</article>
+
+						<article>
+							<h3>Visited Links</h3>
+							<p>Pseudo selector <code>a:visited {}</code>.</p>
+						</article>
+						<article>
+							<h3>Active Links</h3>
+							<p>Pseudo selector <code>a:active {}</code>.</p>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
