--- a/index.html
+++ b/index.html
@@ -309,6 +309,26 @@
 							<li>Child Selectors</li>
 							<li>Adjacent Selectors</li>
 						</ul>
+
+						<article>
+							<h3>Grouping Selectors</h3>
+							<code>div, p, .box {}</code>
+						</article>
+
+						<article>
+							<h3>Descendant Selectors and Specificity</h3>
+							<code>div p a {}</code>
+						</article>
+
+						<article>
+							<h3>Child Selectors</h3>
+							<p>Select element of parent, grandparent :<code>div > p > a {}</code></p>
+						</article>
+
+						<article>
+							<h3>Adjacent Selectors</h3>
+							<p>Select an element and the immediate element after it:<code>form label + input {}</code></p>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
