--- a/index.html
+++ b/index.html
@@ -339,16 +339,50 @@
 							<li>List Style Position</li>
 							<li>List Style Image</li>
 						</ul>
+
+						<article>
+							<h3>List Style Type</h3>
+							<code>list-style-type: none;</code>
+						</article>
+
+						<article>
+							<h3>List Style Position</h3>
+							<code>list-style-position: inside;<br>
+							list-style-position: outside;
+							</code>
+						</article>
+
+						<article>
+							<h3>List Style Image</h3>
+							<code>list-style-image: url('square.gif');</code>
+						</article>
+
 			</section>
 		<!-------Section------>
 			<section>
 				<h2 id="tables">Tables</h2>
 
 						<ul>
+							<li>Table</li>
 							<li>Table Borders</li>
 							<li>Table Cell Vertical Align</li>
-							<li>Table Row Hover Effect</li>
+							<!-- <li>Table Row Hover Effect</li> -->
 						</ul>
+
+						<article>
+							<h3>Table</h3>
+							<code>&lt;table cellspacing="5" border="1"&gt;<br>&lt;/table&gt;</code>
+						</article>
+
+						<article>
+							<h3>Table Border</h3>
+							<code>border-collapse: collapse;</code>
+						</article>
+
+						<article>
+							<h3>Table Cell Vertical Align</h3>
+							<code>vertical-align: bottom;</code>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
@@ -360,6 +394,26 @@
 							<li>Display Inline-Block</li>
 							<li>Display None</li>
 						</ul>
+						
+						<article>
+							<h3>Display Block</h3>
+							<code>display: block;</code>
+						</article>
+
+						<article>
+							<h3>Display Inline</h3>
+							<code>display: inline;</code>
+						</article>
+
+						<article>
+							<h3>Display Inline-Block</h3>
+							<code>display: inline-block;</code>
+						</article>
+
+						<article>
+							<h3>None</h3>
+							<code>display: none;</code> /*making things disappear eg. when elements loading hidden --> JS*/
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
