--- a/index.html
+++ b/index.html
@@ -423,6 +423,20 @@
 							<li>Width</li>
 							<li>Height</li>						
 						</ul>
+
+						<article>
+							<h3>Width</h3>
+							<code>
+								width: 10vw; /*note inline has no width*/
+							</code>
+						</article>
+
+						<article>
+							<h3>Height</h3>
+							<code>
+								height: 10vh; /*note inline has no height*/
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
@@ -434,6 +448,43 @@
 							<li>Position Fixed</li>
 							<li>Overlapping Elements with Z-Index</li>					
 						</ul>
+
+						<article>
+							<h3>Position Relative</h3>
+							<p>By default every position is static.</p>
+							<ul>
+								<li>top</li>
+								<li>left</li>
+								<li>right</li>
+								<li>bottom</li>
+							</ul>
+							<code>
+								position: relative;<br>
+								top: 20px;
+							</code>
+						</article>
+
+						<article>
+							<h3>Position Absolute</h3>
+							<p>For position absolute to work, you need to add <code>position: relative;</code> to the parent element.</p>
+							<ul>
+								<li>top</li>
+								<li>left</li>
+								<li>right</li>
+								<li>bottom</li>
+							</ul>
+							<code>
+								position: absolute;<br>
+								top: 20px;
+							</code>
+						</article>
+
+						<article>
+							<h3>Position Fixed</h3>
+
+							<p>See sticky as alternative.</p>
+
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
