--- a/index.html
+++ b/index.html
@@ -482,8 +482,23 @@
 						<article>
 							<h3>Position Fixed</h3>
 
-							<p>See sticky as alternative.</p>
+							<p>Page has to be scrollable. See sticky as alternative.</p>
 
+							<code>
+								position: fixed;<br>
+								top: 0;<br>
+								left: 0;<br>
+								width: 100%;
+							</code>
+
+						</article>
+
+						<article>
+							<h3>Overlapping Elements with Z-Index</h3>
+
+							<code>
+								z-index: 1; /* or 0 -1 */
+							</code>
 						</article>
 			</section>
 		<!-------Section------>
