--- a/index.html
+++ b/index.html
@@ -510,6 +510,31 @@
 							<li>Overflow Auto</li>
 							<li>Overflow Hidden</li>									
 						</ul>
+
+						<article>
+							<h3>Overflow Scroll</h3>
+							<code>
+								overflow: scroll;
+							</code>
+						</article>
+
+						<article>
+							<h3>Overflow Auto</h3>
+
+							<p>Changing scroll from having a X and Y axis.</p>
+
+							<code>
+								overflow: auto;
+							</code>
+
+							<article>
+								<h3>Overflow Hidden</h3>
+								<p>Hide unwanted scroll bar (x or y) <code>overflow-x: hidden;</code></p>
+								<code>
+									overflow: hidden;
+								</code>
+							</article>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
