--- a/index.html
+++ b/index.html
@@ -542,10 +542,29 @@
 
 						<ul>
 							<li>Float Left & Right</li>
-							<li>Clear</li>
+							<li>Clear Left, Right, Both</li>
 							<li>Clearfix Hack</li>
 							<li>Opacity</li>											
 						</ul>
+
+						<article>
+							<h3>Float Left and Right</h3>
+
+							<code>float: left;</code>
+						</article>
+
+						<article>
+							<h3>Clear Left, Right, Both</h3>
+							
+							<code>clear: left;</code>
+						</article>
+
+						<article>
+							<h3>Clearfix Hack</h3>
+							<p>Has nothing to do with clear, but works in certain scenarios.</p>
+							<code>overflow: auto;</code>
+						</article>
+			</section>
 			</section>
 		<!-------Section------>
 			<section>
