--- a/index.html
+++ b/index.html
@@ -705,6 +705,15 @@
 							<li>Before Selector</li>
 							<li>After Selector</li>
 						</ul>
+
+						<article>
+							<h3>Before Selector</h3>
+						
+							<code>
+								::before { }
+							</code>
+
+						</article>
 			</section>
 	<!------------------------>
 	<!---------CSS3----------->
