--- a/index.html
+++ b/index.html
@@ -714,6 +714,15 @@
 							</code>
 
 						</article>
+
+						<article>
+							<h3>After Selector</h3>
+
+							<code>
+								::after { }
+							</code>
+
+						</article>
 			</section>
 	<!------------------------>
 	<!---------CSS3----------->
