--- a/index.html
+++ b/index.html
@@ -740,6 +740,33 @@
 							<li>Round Images</li>
 							<li>Individually Rounded Corners</li>
 						</ul>
+
+						<article>
+							<h3>Border Radius</h3>
+
+							<code>
+								border-radius: 3px;
+							</code>
+
+						</article>
+
+						<article>
+							<h3>Round Image</h3>
+
+							<code>
+								border-radius: 50%;<br>
+								background-image: url('image.jpg');
+							</code>
+
+						</article>
+						<article>
+							<h3>Individually Rounded Corders</h3>
+
+							<code>
+								border-top-left: 5%;
+							</code>
+
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
