--- a/index.html
+++ b/index.html
@@ -776,6 +776,24 @@
 							<li>Background Sizes</li>
 							<li>Multiple Background Images</li>
 						</ul>
+
+						<article>
+							<h3>Background Sizes</h3>
+
+							<code>
+								background-size: cover;<br>
+								background-position: center center;
+								background-repeat: no-repeat;
+							</code>
+						</article>
+
+						<article>
+							<h3>Multiple Background Images</h3>
+
+							<code>
+								background-image: url('image.jpg'), url('image-2.jpg');
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
