--- a/index.html
+++ b/index.html
@@ -804,6 +804,30 @@
 							<li>HSL and HSLA</li>
 							<li>Opacity vs. Alpha</li>
 						</ul>
+						<article>
+							<h3>Red, Green, Blue & Alpha</h3>
+							<code>
+								color: rgba(0, 0, 255, 0.5);
+							</code>
+						</article>
+
+						<article>
+							<h3>HSL & HSLA</h3>
+							<p>Hue, Saturation and Lightness from 0 to 360</p>
+
+							<code>color: hsla(359, 100, 50, 0.5);</code>
+
+						</article>
+
+						<article>
+							<h3>Opacity vs. Alpha</h3>
+							<p>Opacity includes eg. text and color of the box, aplpha only text or the box.</p>
+
+							<code>
+								opacity: 0.1; // or 0 or 1 to make things disappear<br>
+								color: rgba(0, 0, 0, 0.1);
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
