--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 
 						<article>
 							<h3>Opacity vs. Alpha</h3>
-							<p>Opacity includes eg. text and color of the box, aplpha only text or the box.</p>
+							<p>Opacity includes eg. text and color of the box (and all children elements), aplpha only text or the box.</p>
 
 							<code>
 								opacity: 0.1; // or 0 or 1 to make things disappear<br>
@@ -840,6 +840,15 @@
 							<li>Radial Gradient</li>
 							<li>Repeating Radial Gradient</li>
 						</ul>
+
+						<article>
+							<h3>Linear Gradient</h3>
+
+							<code>
+								background: linear-gradient(45deg, green, grey);<br>
+								background: linear-gradient(to bottom right, green, grey);
+							</code>
+						</article>
 			</section>
 		<!-------Section------>
 			<section>
