--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Responsive CSS Notes</title>
@@ -847,6 +847,17 @@
 							<code>
 								background: linear-gradient(45deg, green, grey);<br>
 								background: linear-gradient(to bottom right, green, grey);
+							</code>
+						</article>
+
+						<article>
+							<h3>Linear Gradient Colors and Transparency</h3>
+							<code>
+								html {
+									height: 100%
+								}<br>
+
+								background: linear-gradient(to bottom, #f5f5f5, #fff)
 							</code>
 						</article>
 			</section>
